# eng-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  mcp_server.py  pyproject.toml  web_server.py
.github/workflows/: build-publish.yml  check-format-test.yml  on-merge-main.yml
realitydefender_mcp_server/: config.py
realitydefender_mcp_server/web_server/: server.py
realitydefender_mcp_server/web_server/templates/: home.html  success.html
src/reality_defender_mcp_server/: config.py  mcp_server.py  web_server.py
src/reality_defender_mcp_server/web_server/: server.py
src/reality_defender_mcp_server/web_server/templates/: upload_file.html
src/realitydefender_mcp_server/: mcp_server.py
src/realitydefender_mcp_server/web_server/: server.py
tests/: test_config.py  test_mcp_server.py  test_server.py
